--- a/package.json
+++ b/package.json
@@ -44,5 +44,11 @@
     "typescript": "^4.6.2",
     "vite": "^2.8.6",
     "vitest": "^0.6.1"
+  },
+  "dependencies": {
+    "@micra/core": "0.1.0-next.19",
+    "@micra/error": "0.1.0-next.8",
+    "@micra/request-handler": "0.1.0-next.6",
+    "history": "^5.3.0"
   }
 }
