chore: skipped lib check on TS

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "declaration": true,
     "emitDeclarationOnly": true,
+    "skipLibCheck": true,
     "types": ["vitest/globals"],
     "baseUrl": ".",
     "paths": {
