--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
     "vitest": "^0.6.1"
   },
   "dependencies": {
-    "@micra/core": "0.1.0-next.19",
-    "@micra/error": "0.1.0-next.8",
-    "@micra/request-handler": "0.1.0-next.6",
+    "@micra/core": "next",
+    "@micra/error": "next",
+    "@micra/request-handler": "next",
     "history": "^5.3.0"
   }
 }
